--- a/views/orders-admin.html
+++ b/views/orders-admin.html
@@ -24,7 +24,7 @@
           <div class="menu menu1">Add Item &#10148;</div>
         </a>
         <a href="menu-admin.html">
-          <div class="menu menu1">All Food Items &#10148;</div>
+          <div class="menu menu1">Food Items &#10148;</div>
         </a>
         <a href="#">
           <div class="menu menu2">All orders &#10148;</div>
