[ft #161273859] fetch delete menu api endpoint

--- a/views/add-menu.html
+++ b/views/add-menu.html
@@ -76,7 +76,7 @@
   </div>
 
   <div class="scroll-top">&#9652;</div>
-  <a href="food-items.html">
+  <a href="menu.html">
     <div class="user-front">View menu</div>
   </a>
 
