--- a/views/menu-admin.html
+++ b/views/menu-admin.html
@@ -65,6 +65,18 @@
     </div>
   </div>
 
+  <div class="modal">
+      <div class="pageAlert">
+        
+      </div>
+    <div class="confirm-form">
+      <form id="delete-form">
+        <div class="confirm-text">Sure you want to delete?</div>
+        <input type="submit" value="delete">
+      </form>
+    </div>
+  </div>
+
   <div class="scroll-top">&#9652;</div>
   <a href="menu.html">
     <div class="user-front">View menu</div>
