--- a/views/add-menu.html
+++ b/views/add-menu.html
@@ -24,7 +24,7 @@
           <div class="menu menu1">Add Item &#10148;</div>
         </a>
         <a href="menu-admin.html">
-          <div class="menu menu1">All Food Items &#10148;</div>
+          <div class="menu menu1">Food Items &#10148;</div>
         </a>
         <a href="orders-admin.html">
           <div class="menu menu2">All orders &#10148;</div>
@@ -48,24 +48,26 @@
         <div class="add-food-item">
           <form id="postmenu">
             <label for="item">Food item: <span class="formAlert"></span></label>
-            <input type="text" id="menu" class="menuItem" placeholder="Food item">
+            <input type="text" id="menu" class="menuItem menuName" placeholder="Food item">
             <label for="description">Description: <span class="formAlert"></span></label>
-            <input type="text" id="description" class="description" placeholder="Describe item">
+            <input type="text" id="description" class="description menuDescription" placeholder="Describe item">
             <label for="category">Category: <span class="formAlert"></span></label>
-            <input type="text" id="category" class="category" placeholder="Category">
+            <input type="text" id="category" class="category menuCategory" placeholder="Category">
             <label for="imageURL">Image: <span class="formAlert"></span></label>
+            <input type="text" hidden class="menuImageURL" id="menuImageURL">
             <input type="file" accept="image/*" id="imageURL" class="imageURL">
             <div class="sub-input">
               <div class="price">
                 <label for="price">Price: <span class="formAlert"></span></label>
-                <input type="number" id="price" class="price" placeholder="Price" maxlength="6">
+                <input type="number" id="price" class="price menuPrice" placeholder="Price" maxlength="6">
               </div>
               <div class="quantity">
                 <label for="quantity">Quantity: <span class="formAlert"></span></label>
-                <input type="number" id="quantity" class="quantity" placeholder="Available quantity" maxlength="6">
+                <input type="number" id="quantity" class="quantity menuQuantity" placeholder="Available quantity" maxlength="6">
               </div>
             </div>
             <input type="submit" value="Submit">
+            <input type="reset" value="Cancel" class="reset-form">
           </form>
 
         </div>
