--- a/views/orders.html
+++ b/views/orders.html
@@ -19,12 +19,29 @@
           <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
           <span><a href="food-items.html">Fast Food Fast</a> </span>
         </div>
-        <a href="menu.html">
-          <div class="menu menu1">View Menu &#10148;</div>
-        </a>
-        <a href="#">
-          <div class="menu menu2 logout">Logout &#10148;</div>
-        </a>
+        <div class="menu-options">
+          <a href="menu.html">
+            <div class="menu menu1">View Menu &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="allOrders">All Orders &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="newOrders">New Orders &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="processingOrders">Processing &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="cancelledOrders">Cancelled &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="completedOrders">Completed &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu logout">Logout &#10148;</div>
+          </a>
+        </div>
       </div>
       <div class="menu-bottom"></div>
     </div>
@@ -36,6 +53,7 @@
       </div>
 
       <div class="dashboard-content-bg">
+        <div class="pageAlert padAlertDiv"></div>
         <div class="page-title all-orders">
           <div>ORDER HISTORY</div>
         </div>
