--- a/views/specific-user-orders-admin.html
+++ b/views/specific-user-orders-admin.html
@@ -20,18 +20,35 @@
           <a href="menu.html"><img src="img/logo.png" alt="logo"></a>
           <span><a href="menu.html">Fast Food Fast</a> </span>
         </div>
-        <a href="add-menu.html">
-          <div class="menu menu1">Add Item &#10148;</div>
-        </a>
-        <a href="menu-admin.html">
-          <div class="menu menu1">All Food Items &#10148;</div>
-        </a>
-        <a href="orders-admin.html">
-          <div class="menu menu2">All orders &#10148;</div>
-        </a>
-        <a href="#">
-          <div class="menu menu2 logout">Logout &#10148;</div>
-        </a>
+        <div class="menu-options">
+          <a href="add-menu.html">
+            <div class="menu">Add Item &#10148;</div>
+          </a>
+          <a href="menu-admin.html">
+            <div class="menu">Food Items &#10148;</div>
+          </a>
+          <a href="orders-admin.html">
+            <div class="menu">General orders &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="allOrders">All orders &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="newOrders">New Orders &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="processingOrders">Processing &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="cancelledOrders">Cancelled &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu" id="completedOrders">Completed &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu logout">Logout &#10148;</div>
+          </a>
+        </div>
       </div>
       <div class="menu-bottom"></div>
     </div>
