--- a/views/css/style.css
+++ b/views/css/style.css
@@ -2,7 +2,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Comfortaa';
-  font-size: 17px;
   overflow-x: hidden;
 }
 
@@ -55,13 +54,6 @@ nav .username a {
   cursor: pointer;
 }
 
-nav .username sup {
-  font-weight: bold;
-  line-height: 5px;
-  font-size: 14px;
-  text-decoration: underline
-}
-
 nav ul li a {
   text-decoration: none;
   color: #fff;
@@ -80,11 +72,11 @@ nav ul li a {
 .dropdown-content {
   display: none;
   position: absolute;
-  z-index: 2;
+  z-index: 20;
 }
 
 .dropdown:hover .dropdown-content {
-  background: rgba(31, 56, 95, 0.5);
+  background: rgba(82, 187, 213, 0.5);
   padding: 10px;
   height: 90px;
   width: 80px;
@@ -96,26 +88,8 @@ nav ul li a {
   margin-top: 15px;
   padding: 5px;
   border-radius: 10px;
-  background: rgb(31, 56, 95);
+  background: rgb(82, 187, 213);
   font-size: 16px;
-}
-
-.dropdown-content a sup {
-  color: #e59400;
-  font-size: 12px;
-}
-
-.banner {
-  height: 550px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.banner1 {
-  background-image: url('../img/banner1.jpg');
-  background-size: 100% 100%;
-  height: 100%;
-  width: 100%;
 }
 
 .page-title span {
@@ -597,111 +571,15 @@ input.deliver-to {
   box-shadow: 1px 1px 2px 1px #404040;
 }
 
-@media(max-width: 1160px) {
-  .item-description {
-    margin-top: 5px;
-  }
-
-  .order-input {
-    margin-top: 5px;
-  }
-
-  .banner {
-    height: 500px;
-  }
-}
-
-@media(max-width: 980px) {
-  .orderNow {
-    font-size: 14px;
-  }
-}
-
-@media(max-width: 960px) {
-  .banner2 {
-    display: none;
-  }
-
-  .banner {
-    height: 480px;
-  }
-
-  .food {
-    height: 220px;
-  }
-}
-
-@media(max-width: 920px) {
-  .order-input select.location {
-    width: 100px;
-  }
-
-  .banner {
-    height: 450px;
-  }
-}
-
 @media(max-width:898px) {
   .auth-btn input {
     margin-left: 0;
   }
 }
 
-@media(max-width: 820px) {
-  .banner {
-    height: 420px;
-  }
-}
-
-@media(max-width: 807px) {
-  .item-description {
-    margin-top: 0;
-  }
-
-  .order-input {
-    margin-top: 3px;
-  }
-
-  .orderNow {
-    width: 40%;
-  }
-}
-
-@media(max-width: 770px) {
-  .order-input select.location {
-    width: 70px;
-  }
-
-  .banner {
-    height: 400px;
-  }
-}
-
 @media(max-width: 760px) {
-  .category {
-    flex-direction: column;
-  }
-
-  .food {
-    height: 600px;
-  }
-
-  .category {
-    flex: 1;
-  }
-
-  .items {
-    flex: 1;
-  }
-
   .delivery-girl img {
     width: 65%;
-  }
-}
-
-@media(max-width: 690px) {
-  .banner {
-    height: 360px;
   }
 }
 
@@ -709,35 +587,11 @@ input.deliver-to {
   .delivery-girl img {
     width: 80%;
   }
-
-  .banner {
-    height: 340px;
-  }
 }
 
 @media(max-width: 560px) {
-  .orders-list {
-    display: none;
-  }
-
-  .order-mobile {
-    display: block;
-  }
-
   h1.page-title {
     font-size: 25px;
-  }
-}
-
-@media(max-width: 520px) {
-  .banner {
-    height: 300px;
-  }
-}
-
-@media(max-width: 515px) {
-  .locate-div {
-    padding: 10px;
   }
 }
 
@@ -779,28 +633,22 @@ input.deliver-to {
   .auth-btn {
     padding-top: 50px;
   }
-
-  .items {
-    flex-direction: column;
-  }
-
-  .food {
-    height: 800px;
-  }
 }
 
 @media(max-width: 475px) {
-  .banner {
-    height: 270px;
-  }
-
   .username,
   .logout {
     display: none;
   }
 
+  #signup,
+  #login {
+    display: none;
+  }
+
   .dropdown {
     display: inline-block;
+    float: right;
   }
 }
 
@@ -816,28 +664,9 @@ input.deliver-to {
   }
 }
 
-@media(max-width: 435px) {
-  .banner {
-    height: 230px;
-  }
-}
-
-@media(max-width: 430px) {
-  .locate-div {
-    padding: 5px;
-    font-size: 14px;
-  }
-}
-
 @media(max-width:410px) {
   h1.page-title {
     font-size: 20px;
-  }
-}
-
-@media(max-width: 385px) {
-  .banner {
-    height: 200px;
   }
 }
 
@@ -862,16 +691,6 @@ input.deliver-to {
 @media(max-width: 345px) {
   .delivery-girl img {
     width: 50%;
-  }
-}
-
-@media(max-width: 325px) {
-  .complete-order {
-    flex-direction: column;
-  }
-
-  .order-summary h4 {
-    padding-top: 5px;
   }
 }
 
@@ -917,10 +736,6 @@ input.deliver-to {
   nav ul li {
     margin-left: 5px;
   }
-
-  .food {
-    height: 850px;
-  }
 }
 
 @media(max-width:275px) {
@@ -936,16 +751,6 @@ input.deliver-to {
   .auth-btn {
     margin-left: 25%
   }
-
-  .locate-div {
-    padding: 2px;
-  }
-}
-
-@media(max-width: 270px) {
-  .banner {
-    height: 130px;
-  }
 }
 
 @media(max-width: 257px) {
@@ -958,37 +763,15 @@ input.deliver-to {
   }
 }
 
-@media(max-width: 251px) {
-  .food {
-    height: 880px;
-  }
-}
-
 @media(max-width: 215px) {
   nav ul li {
     margin-left: 0;
-  }
-
-  .food {
-    height: 900px;
   }
 }
 
 @media(max-width: 200px) {
   .auth-btn {
     margin-left: 15%
-  }
-
-  .banner {
-    height: 100px;
-  }
-
-  .food {
-    height: 920px;
-  }
-
-  .orderNow {
-    width: 50%;
   }
 }
 
