--- a/views/menu-admin.html
+++ b/views/menu-admin.html
@@ -20,18 +20,20 @@
           <a href="menu.html"><img src="img/logo.png" alt="logo"></a>
           <span><a href="menu.html">Fast Food Fast</a> </span>
         </div>
-        <a href="add-menu.html">
-          <div class="menu menu1">Add Item &#10148;</div>
-        </a>
-        <a href="#">
-          <div class="menu menu1">Food Items &#10148;</div>
-        </a>
-        <a href="orders-admin.html">
-          <div class="menu menu2">All orders &#10148;</div>
-        </a>
-        <a href="#">
-          <div class="menu menu2 logout">Logout &#10148;</div>
-        </a>
+        <div class="menu-options">
+          <a href="add-menu.html">
+            <div class="menu menu1">Add Item &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu menu1">Food Items &#10148;</div>
+          </a>
+          <a href="orders-admin.html">
+            <div class="menu ">All orders &#10148;</div>
+          </a>
+          <a href="#">
+            <div class="menu logout">Logout &#10148;</div>
+          </a>
+        </div>
       </div>
       <div class="menu-bottom"></div>
     </div>
