[ft 161302714] Display order-cart

--- a/views/menu.html
+++ b/views/menu.html
@@ -89,15 +89,14 @@
   </div>
 
   <div class="toggle-cart" id="toggle-cart">
-    <strong>view cart</strong><span>&#10149;</span>
+    <strong>CART </strong><span>&#9832; <em class="counter"></em></span>
   </div>
 
   <div class="cart-dashboard">
     <div class="cart-items">
-      <!-- //////////////////////////////////////////////////////////////////////////////////// -->
 
-      <!-- //////////////////////////////////////////////////////////////////////////////////// -->
     </div>
+    <div class="cartTotal"></div>
     <div class="order-cart" id="cartDiv">
       <form class="order-form">
         <div class="decide">
