--- a/views/unauthorized.html
+++ b/views/unauthorized.html
@@ -15,10 +15,13 @@
     <div class="dashboard-content">
       <div class="dashboard-content-bg">
         <div class="page-title"></div>
+
         <div class="unauthorized">
+          <div class="head-smiley">&#9786;</div>
           <h1>Unauthorized Access</h1>
-            <p>Loading food items &nbsp;<span class="loader"></span></p>
-            
+            <p>
+              Loading food items &nbsp;<span class="loader"></span>
+            </p>
         </div>
 
       </div>
