--- a/views/menu.html
+++ b/views/menu.html
@@ -89,19 +89,18 @@
   </div>
 
   <div class="toggle-cart" id="toggle-cart">
-    <strong>view cart</strong><span>&#10149;</span>
+    <strong>CART </strong><span>&#9832; <em class="counter"></em></span>
   </div>
 
   <div class="cart-dashboard">
     <div class="cart-items">
-      <!-- //////////////////////////////////////////////////////////////////////////////////// -->
 
-      <!-- //////////////////////////////////////////////////////////////////////////////////// -->
     </div>
+    <div class="cartTotal"></div>
     <div class="order-cart" id="cartDiv">
       <form class="order-form">
         <div class="decide">
-          Deliver to your residence? &nbsp;&nbsp; Yes: <input type="checkbox" value="" checked><br>
+          Deliver to your residence? Yes: <input type="checkbox" value="" checked><br>
         </div>
         No: &nbsp; <input type="text" placeholder="Input location" class="deliver-to" minlength="5" maxlength="100"><br>
         <input type="submit" value="Submit Order" id="cartBtn">
