--- a/views/user-orders-admin.html
+++ b/views/user-orders-admin.html
@@ -28,10 +28,10 @@
             <div class="menu">Food Items &#10148;</div>
           </a>
           <a href="orders-admin.html">
-            <div class="menu">General orders &#10148;</div>
+            <div class="menu">All orders &#10148;</div>
           </a>
           <a href="#">
-            <div class="menu" id="allOrders">All orders &#10148;</div>
+            <div class="menu" id="allOrders">Orders &#10148;</div>
           </a>
           <a href="#">
             <div class="menu" id="newOrders">New Orders &#10148;</div>
@@ -97,7 +97,7 @@
   </footer>
 
   <script src="js/fetch/utility.js"></script>
-  <script src="js/fetch/specific-user-orders-admin.js"></script>
+  <script src="js/fetch/user-orders-admin.js"></script>
   <script src="js/scroll.js"></script>
   <script src="js/fetch/toggle-menu.js"></script>
   <script src="js/fetch/logout.js"></script>
