--- a/views/orders.html
+++ b/views/orders.html
@@ -90,7 +90,7 @@
 
   <script src="js/fetch/utility.js"></script>
   <script src="js/fetch/toggle-menu.js"></script>
-  <script src="js/fetch/user-order-history.js"></script>
+  <script src="js/fetch/orders.js"></script>
   <script src="js/scroll.js"></script>
   <script src="js/fetch/logout.js"></script>
 </body>
