--- a/views/menu.html
+++ b/views/menu.html
@@ -35,8 +35,8 @@
           <li class="dropdown">
             <span>&#8801;</span>
             <div class="dropdown-content">
-              <a href="#" id="signup-drop">Signup</a>
-              <a href="#" id="login-drop">Login</a>
+              <a href="#" id="signupDrop">Signup</a>
+              <a href="#" id="loginDrop">Login</a>
             </div>
           </li>
       </nav>
@@ -92,19 +92,21 @@
     <strong>CART </strong><span>&#9832; <em class="counter"></em></span>
   </div>
 
-  <div class="cart-dashboard">
-    <div class="cart-items">
-
-    </div>
-    <div class="cartTotal"></div>
-    <div class="order-cart" id="cartDiv">
-      <form class="order-form">
-        <div class="decide">
-          Deliver to your residence? Yes: <input type="checkbox" value="" checked><br>
-        </div>
-        No: &nbsp; <input type="text" placeholder="Input location" class="deliver-to" minlength="5" maxlength="100"><br>
-        <input type="submit" value="Submit Order" id="cartBtn">
-      </form>
+  <div class="cart-modal">
+    <div class="cart-dashboard">
+      <div class="cart-items">
+  
+      </div>
+      <div class="cartTotal"></div>
+      <div class="order-cart" id="cartDiv">
+        <form class="order-form">
+          <div class="decide">
+            Deliver to your residence? Yes: <input type="checkbox" value="" checked><br>
+          </div>
+          No: &nbsp; <input type="text" placeholder="Input location" class="deliver-to" minlength="5" maxlength="100"><br>
+          <input type="submit" value="Submit Order" id="cartBtn">
+        </form>
+      </div>
     </div>
   </div>
 
