--- a/views/orders-admin.html
+++ b/views/orders-admin.html
@@ -14,41 +14,44 @@
 
 <body>
   <div class="dashboard">
-    <div class="dashboard-menu">
-      <div class="menu-top">
-        <div class="welcome">
-          <a href="menu.html"><img src="img/logo.png" alt="logo"></a>
-          <span><a href="menu.html">Fast Food Fast</a> </span>
+    <div class="cart-modal">
+      <div class="dashboard-menu">
+        <div class="menu-top">
+          <div class="welcome">
+            <a href="menu.html"><img src="img/logo.png" alt="logo"></a>
+            <span><a href="menu.html">Fast Food Fast</a> </span>
+          </div>
+          <div class="menu-options">
+            <a href="add-menu.html">
+              <div class="menu">Add Item &#10148;</div>
+            </a>
+            <a href="menu-admin.html">
+              <div class="menu">Food Items &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="allOrders">All orders &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="newOrders">New Orders &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="processingOrders">Processing &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="cancelledOrders">Cancelled &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="completedOrders">Completed &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu logout">Logout &#10148;</div>
+            </a>
+          </div>
         </div>
-        <div class="menu-options">
-          <a href="add-menu.html">
-            <div class="menu">Add Item &#10148;</div>
-          </a>
-          <a href="menu-admin.html">
-            <div class="menu">Food Items &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="allOrders">All orders &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="newOrders">New Orders &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="processingOrders">Processing &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="cancelledOrders">Cancelled &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="completedOrders">Completed &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu logout">Logout &#10148;</div>
-          </a>
-        </div>
+        <div class="menu-bottom"></div>
       </div>
-      <div class="menu-bottom"></div>
     </div>
+
 
     <div class="dashboard-content">
 
@@ -78,9 +81,9 @@
         </div>
 
       </div>
-
     </div>
   </div>
+
   <div class="modal">
     <div class="specific-order">
       <div class="order-details">
