--- a/views/add-menu.html
+++ b/views/add-menu.html
@@ -14,28 +14,32 @@
 
 <body>
   <div class="dashboard">
-    <div class="dashboard-menu">
-      <div class="menu-top">
-        <div class="welcome">
-          <a href="menu.html"><img src="img/logo.png" alt="logo"></a>
-          <span><a href="menu.html">Fast Food Fast</a> </span>
+    <div class="cart-modal">
+
+      <div class="dashboard-menu">
+        <div class="menu-top">
+          <div class="welcome">
+            <a href="menu.html"><img src="img/logo.png" alt="logo"></a>
+            <span><a href="menu.html">Fast Food Fast</a> </span>
+          </div>
+          <div class="menu-options">
+            <a href="#">
+              <div class="menu menu1">Add Item &#10148;</div>
+            </a>
+            <a href="menu-admin.html">
+              <div class="menu menu1">Food Items &#10148;</div>
+            </a>
+            <a href="orders-admin.html">
+              <div class="menu">All orders &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu logout">Logout &#10148;</div>
+            </a>
+          </div>
         </div>
-        <div class="menu-options">
-          <a href="#">
-            <div class="menu menu1">Add Item &#10148;</div>
-          </a>
-          <a href="menu-admin.html">
-            <div class="menu menu1">Food Items &#10148;</div>
-          </a>
-          <a href="orders-admin.html">
-            <div class="menu">All orders &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu logout">Logout &#10148;</div>
-          </a>
-        </div>
+        <div class="menu-bottom"></div>
       </div>
-      <div class="menu-bottom"></div>
+
     </div>
 
     <div class="dashboard-content">
@@ -65,7 +69,8 @@
               </div>
               <div class="quantity">
                 <label for="quantity">Quantity: <span class="formAlert"></span></label>
-                <input type="number" id="quantity" class="quantity menuQuantity" placeholder="Available quantity" maxlength="6">
+                <input type="number" id="quantity" class="quantity menuQuantity" placeholder="Available quantity"
+                  maxlength="6">
               </div>
             </div>
             <input type="submit" value="Submit">
