--- a/views/css/orders.css
+++ b/views/css/orders.css
@@ -3,12 +3,12 @@ body {
   margin: 0;
   font-family: 'Comfortaa';
   overflow-x: hidden;
-  height: 100vh;
+  min-height: 100vh;
   background: #efefef;
 }
 
 .dashboard {
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .dashboard-content-bg div.page-title {
@@ -141,13 +141,18 @@ tr:first-child {
 
 .modal {
   background: rgba(36, 40, 38, 0.8);
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
   top: 0;
   left: 0;
-  position: fixed;
+  position: absolute;
   color: #fff;
   display: none;
+  z-index: 20;
+}
+
+.delete-modal {
+  position: fixed;
 }
 
 .specific-order {
@@ -156,7 +161,6 @@ tr:first-child {
   padding: 10px;
   display: flex;
   justify-content: space-between;
-  height: auto;
 }
 
 .order-details,
@@ -215,6 +219,18 @@ tr:first-child {
   cursor: pointer;
 }
 
+.cart-modal {
+  width: 100%;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background: rgba(36, 40, 38, 0.5);
+  display: none;
+  position: fixed;
+  height: 100%;
+  z-index: 15;
+}
+
 .dashboard-menu {
   background: #52bad5;
   flex-direction: column;
@@ -239,7 +255,7 @@ tr:first-child {
   transition-timing-function: ease-out;
   padding: 15px 10px;
   line-height: 30px;
-  z-index: 2;
+  z-index: 15;
 }
 
 .toggle-menu span {
@@ -445,10 +461,11 @@ form input[type='reset'] {
   color: #e65c00;
   font-size: 20px;
   position: fixed;
-  bottom: 20px;
-  right: 30px;
+  bottom: 45px;
+  right: 10px;
   cursor: pointer;
   padding: 0 7px;
+  z-index: 50;
   border-radius: 50%;
   background: #efefef;
   box-shadow: 1px 1px 2px 1px #404040;
@@ -456,12 +473,14 @@ form input[type='reset'] {
 
 .user-front {
   color: black;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: bold;
   position: fixed;
-  bottom: 10px;
-  right: 60px;
+  z-index: 50;
+  bottom: 5px;
+  right: 5px;
   cursor: pointer;
-  padding: 8px;
+  padding: 1px 3px;
   border-radius: 10px;
   background: #e65c00;
   color: #fff;
@@ -491,10 +510,18 @@ form input[type='reset'] {
   padding-top: 20px;
   color: #fff;
   z-index: 2;
+  position: fixed;
+  width: 100vw;
 }
 
 @media(max-width: 760px) {
   .specific-order {
     flex-direction: column;
+  }
+}
+
+@media(max-height: 330px) {
+  .confirm-form {
+    margin: 80px auto;
   }
 }
