--- a/views/css/style.css
+++ b/views/css/style.css
@@ -118,7 +118,7 @@ nav ul li a {
 .welcome-content,
 .modal {
   background: rgba(36, 40, 38, 0.8);
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   top: 0;
   left: 0;
@@ -191,7 +191,7 @@ nav ul li a {
   color: #fff;
   border: none;
   font-size: 17px;
-  font-family: fantasy;
+  font-family: 'Comfortaa';
   outline: none;
   display: inline-block;
   box-shadow: 1px 1px 1px 1px #1a1a1a;
@@ -208,7 +208,7 @@ nav ul li a {
 }
 
 .modal {
-  z-index: 2;
+  z-index: 20;
   display: none;
   text-align: center;
 }
@@ -326,8 +326,8 @@ nav ul li a {
   color: #e65c00;
   font-size: 20px;
   position: fixed;
-  bottom: 20px;
-  right: 30px;
+  bottom: 50px;
+  right: 5px;
   cursor: pointer;
   padding: 0 7px;
   border-radius: 50%;
@@ -444,7 +444,7 @@ form input[type='submit'].input {
   width: 150px;
   height: 35px;
   text-align: center;
-  position: absolute;
+  position: fixed;
   top: 60px;
   color: #fff;
   transition: 0.5s;
@@ -465,18 +465,25 @@ form input[type='submit'].input {
   font-weight: bold;
 }
 
+.cart-modal {
+  width: 100%;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background: rgba(36, 40, 38, 0.5);
+  display: none;
+  position: fixed;
+  height: 100%;
+}
+
 .cart-dashboard {
   background: #52bad5;
   display: none;
-  position: absolute;
+  position: fixed;
   top: 60px;
   width: 310px;
   z-index: 1;
-<<<<<<< HEAD
-  height: 91.2vh;
-=======
   min-height: 96.5vh;
->>>>>>> ft-adjust-ui-ux-161302714
   padding: 20px 5px;
   box-shadow: 2px 2px 5px 2px gray;
   transition: 0.5s;
@@ -491,7 +498,6 @@ form input[type='submit'].input {
   overflow-y: auto;
   overflow-x: hidden;
   margin-top: 40px;
-<<<<<<< HEAD
 }
 
 .newOrderDiv {
@@ -525,41 +531,6 @@ form input[type='submit'].input {
   box-shadow: 1px 1px 2px 1px #404040;
 }
 
-=======
-}
-
-.newOrderDiv {
-  display: flex;
-  height: auto;
-  width: 100%;
-  padding: 5px;
-  color: #fff;
-  margin-top: 5px;
-  background: #2091ad;
-}
-
-.otherDetails {
-  margin-left: 5px;
-}
-
-.cartTotal {
-  text-align: center;
-  background: #404040;
-  color: #fff;
-  padding: 5px;
-  font-weight: bold;
-  margin: auto;
-}
-
-.cartQuantity {
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  padding: 2px;
-  box-shadow: 1px 1px 2px 1px #404040;
-}
-
->>>>>>> ft-adjust-ui-ux-161302714
 .orderImageDiv {
   height: 55px;
   width: 70px;
@@ -600,9 +571,6 @@ input.deliver-to {
   box-shadow: 1px 1px 2px 0 #404040;
   width: 80%
 }
-<<<<<<< HEAD
-/* /////////////////////////////////////////////////////////// */
-=======
 
 .delete {
   cursor: pointer;
@@ -629,7 +597,6 @@ input.deliver-to {
   display: block;
 }
 
->>>>>>> ft-adjust-ui-ux-161302714
 .pageAlert {
   padding: 10px;
   height: 15px;
@@ -718,12 +685,13 @@ input.deliver-to {
 
 .user-front {
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   position: fixed;
-  bottom: 10px;
-  right: 60px;
+  bottom: 5px;
+  right: 5px;
+  font-weight: bold;
   cursor: pointer;
-  padding: 5px;
+  padding: 1px 3px;
   border-radius: 10px;
   background: #e65c00;
   box-shadow: 1px 1px 2px 1px #404040;
@@ -805,18 +773,8 @@ input.deliver-to {
     display: none;
   }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-  #signup,
-  #login {
-=======
   .signup-menu,
   .login-menu {
->>>>>>> ft-adjust-ui-ux-161302714
-=======
-  .signup-menu,
-  .login-menu {
->>>>>>> ft-adjust-ui-ux-161302714
     display: none;
   }
 
@@ -998,6 +956,15 @@ input.deliver-to {
 @media(max-height: 455px) {
   .welcome {
     height: 160vh;
+  }
+  .welcome-content, .modal {
+    height: 160vh;
+  }
+}
+
+@media(max-height: 360px) {
+  .welcome-content, .modal {
+    height: 180vh;
   }
 }
 
