--- a/views/orders.html
+++ b/views/orders.html
@@ -12,38 +12,39 @@
 
 <body>
   <div class="dashboard">
-
-    <div class="dashboard-menu">
-      <div class="menu-top">
-        <div class="welcome">
-          <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
-          <span><a href="food-items.html">Fast Food Fast</a> </span>
+    <div class="cart-modal">
+      <div class="dashboard-menu">
+        <div class="menu-top">
+          <div class="welcome">
+            <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
+            <span><a href="food-items.html">Fast Food Fast</a> </span>
+          </div>
+          <div class="menu-options">
+            <a href="menu.html">
+              <div class="menu menu1">View Menu &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="allOrders">All Orders &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="newOrders">New Orders &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="processingOrders">Processing &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="cancelledOrders">Cancelled &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu" id="completedOrders">Completed &#10148;</div>
+            </a>
+            <a href="#">
+              <div class="menu logout">Logout &#10148;</div>
+            </a>
+          </div>
         </div>
-        <div class="menu-options">
-          <a href="menu.html">
-            <div class="menu menu1">View Menu &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="allOrders">All Orders &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="newOrders">New Orders &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="processingOrders">Processing &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="cancelledOrders">Cancelled &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu" id="completedOrders">Completed &#10148;</div>
-          </a>
-          <a href="#">
-            <div class="menu logout">Logout &#10148;</div>
-          </a>
-        </div>
+        <div class="menu-bottom"></div>
       </div>
-      <div class="menu-bottom"></div>
     </div>
 
     <div class="dashboard-content">
